--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "nookies": "^2.5.2",
     "prisma": "^5.18.0",
     "react": "^18",
@@ -24,6 +25,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.15",
+    "@types/nodemailer": "^6.4.15",
     "@types/nookies": "^2.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
