--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
